# qCHeff

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: conf.py  index.md  quickstart.md  requirements.txt
docs/developer_docs/: index.md
docs/examples/: examples.md
docs/user_guide/: index.md  install.md  iswt.md  iswt_user_guide.md  magnus.md  magnus_user_guide.md  operators.md  operators_user_guide.md  theoretical_background.md  user_guide.md
examples/: README.md  pyproject.toml  requirements.txt
examples/duffing/: duffing_chain.ipynb  duffing_chain_numeric.ipynb  duffing_osc.ipynb  duffingosc_numeric.ipynb
examples/legate/: benchmark_magnus_cpu.py  benchmark_magnus_gpu.py  benchmark_npad_cpu.py  benchmark_npad_gpu.py  benchmark_qutip_zz_cpu.py  explanation_legate_magnus_chain.ipynb  explanation_legate_magnus_qubit.ipynb  explanation_legate_npad_chain_zz copy.ipynb  explanation_legate_npad_duffing_chain_zz.ipynb  explanation_legate_npad_duffing_resonator_zz.ipynb  legate_magnus_params.yaml  legate_npad_params.yaml  npad_speedup.py  pytest.ini
examples/magnus/: benchmark_expm_cpu.py  benchmark_expm_gpu.py  benchmark_magnus_cpu.py  benchmark_magnus_gpu.py  magnus_test.ipynb  pulse_viz_utils.py
examples/npad/: benchmark_baseline_cpu.py  benchmark_baseline_gpu.py  benchmark_npad_decouple_cpu.py  benchmark_npad_decouple_gpu.py  benchmark_utils_cpu.py  benchmark_utils_gpu.py  benchmark_visualization.ipynb
examples/paper/: magnus_comparison.md  magnus_pop_transfer_pulse_optimization.md  magnus_qutip_error_comparison.md  magnus_time_evolution.md  methods.py  npad_jc_model.py  npad_process_viz.py  qcheff_ops.md  transmon_chain_zz.py
examples/paper/docs/: quickstart.py
examples/paper/iswt/: iswt_benchmark.md  iswt_profiling.py  jc_analysis.md  jch_analysis.py  jch_mott.md
examples/paper/magnus/: magnus_pop_transfer_pulse_optimization.md  spin_magnus_rwa.md
examples/paper/magnus/benchmarks/: magnus_bench.md  magnus_bench_accuracy.md  magnus_benchmark_utils.py
src/qcheff/: __init__.py
src/qcheff/iswt/: __init__.py  iswt.py  rswt.py
src/qcheff/magnus/: __init__.py  magnus.py
src/qcheff/models/duffing/: duffing_chain_symbolic_utils.py  duffing_chain_utils.py  duffing_utils.py
src/qcheff/models/jaynes_cummings/: models.py  utils.py
src/qcheff/models/jaynes_cummings_hubbard/: models.py  utils.py
src/qcheff/models/spin_chain/: utils.py
src/qcheff/operators/: __init__.py  dense_operator.py  operator_base.py  operators.py  sparse_operator.py  utils.py
src/qcheff/utils/: pulses.py  system.py
tests/: test_qcheff_settings.py
tests/iswt/: test_npad.py
tests/magnus/: test_expm_cupy.py  test_magnus.py
tests/operators/: test_operator_base.py  test_operator_utils.py  test_operators.py
tests/utils/: test_pulses.py  test_ramp.py  test_system.py
tests_old/rswt/: test_rswt_cpu.py  test_rswt_gpu.py  test_rswt_utils.py
