[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qCHeff"
version = "0.2.0"
description = "Effective Hamiltonian calculator for quantum systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "abhishekchak52", email = "abhishekchak52@gmail.com" },
  { name = "taylorpatti", email = "tpatti@nvidia.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "more-itertools>=10.4.0",
  "numpy>=2.0.0",
  "scipy>=1.14",
]

[project.optional-dependencies]
models = [
    "qutip>=5.0.3.post1",
    "scqubits",
]
plot = [
    "matplotlib>=3.9.2",
]
cupy = [
    "cupy-cuda12x>=13.3.0",
]
docs = [
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx-autobuild>=2024.9.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx>=8.0.2",
]
type = [
    "mypy>=1.11.2",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-sugar>=1.0.0",
    "nvtx>=0.2.10",
]

[tool.uv.sources]
scqubits = { git = "https://github.com/scqubits/scqubits.git" }

[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore module level imports
  "E402",
  # ignore upper case variables
  "PLR2004", "N802", "N803", "N806",

]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["qcheff"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]

[tool.coverage.run]
source_pkgs = ["qcheff"]
omit = [
  "tests/*",
  "src/qcheff/models/*",
  "*/utils_gpu.py",
]


