[build-system]
requires = ["uv_build>=0.8.11,<0.9.0"]
build-backend = "uv_build"

[project]
name = "qCHeff"
version = "0.2.0"
description = "Effective Hamiltonian calculator for quantum systems."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = []
authors = [
  { name = "abhishekchak52", email = "abhishekchak52@gmail.com" },
  { name = "taylorpatti", email = "tpatti@nvidia.com" },
]
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "more-itertools>=10.4.0",
  "numpy>=2.0.0",
  "scipy>=1.13",
]

[dependency-groups]
models = [
    "qutip>=5.0.3.post1",
    "scqubits>=4.2",
]
plot = [
    "matplotlib>=3.9.2",
]
docs = [
    "myst-parser>=4.0.0",
    "pydata-sphinx-theme>=0.15.4",
    "sphinx-autobuild>=2024.9.3",
    "sphinx-autodoc2>=0.5.0",
    "sphinx>=8.0.2",
]
type = [
    "mypy>=1.11.2",
]

cupy-cuda11x = [
    "cupy-cuda11x>=13.3.0",
]
cupy-cuda12x = [
    "cupy-cuda12x>=13.3.0",
]

test = [
    "pytest>=8.3.2",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-rich>=0.2.0",
]

[tool.coverage.run]
source_pkgs = ["qcheff"]
omit = [
  "tests/*",
  "src/qcheff/models/*",
  "*/utils_gpu.py",
]


[tool.tox]
requires = ["tox>=4", "tox-uv>=1.2.0"]
env_list = ["docs", "3.13", "3.12", "3.11"]

[tool.tox.env_run_base]
description = "run unit tests"
dependency_groups = ["test", "cupy-cuda12x", "models"]
commands = [["pytest", { replace = "posargs", default = ["tests"], extend = true }]]




[tool.mypy]
disable_error_code = "import-untyped"

[tool.ruff.lint]
select = [
  "A",
  "ARG",
  "B",
  "C",
  "DTZ",
  "E",
  "EM",
  "F",
  "FBT",
  "I",
  "ICN",
  "ISC",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "Q",
  "RUF",
  "S",
  "T",
  "TID",
  "UP",
  "W",
  "YTT",
]
ignore = [
  # Allow non-abstract empty methods in abstract base classes
  "B027",
  # Allow boolean positional values in function calls, like `dict.get(... True)`
  "FBT003",
  # Ignore checks for possible passwords
  "S105", "S106", "S107",
  # Ignore complexity
  "C901", "PLR0911", "PLR0912", "PLR0913", "PLR0915",
  # Ignore module level imports
  "E402",
  # ignore upper case variables
  "PLR2004", "N802", "N803", "N806",

]
unfixable = [
  # Don't touch unused imports
  "F401",
]

[tool.ruff.isort]
known-first-party = ["qcheff"]

[tool.ruff.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.per-file-ignores]
# Tests can use magic values, assertions, and relative imports
"tests/**/*" = ["PLR2004", "S101", "TID252"]


